// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Do payment with Excel FSP Export FSP instructions Should return all program-question/program-custom attributes on Get FSP instruction with Excel-FSP when "columnsToExport" is not set 1`] = `
[
  {
    "data": [
      {
        "accountId": null,
        "amount": 20,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "1",
        "fixedChoice": null,
        "healthArea": "",
        "house": "stark",
        "knowsNothing": "true",
        "motto": "Winter is coming",
        "name": "John Snow",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235554",
        "referenceId": "westeros123456789",
        "whatsappPhoneNumber": "14155235554",
      },
      {
        "accountId": null,
        "amount": 10,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "0",
        "fixedChoice": null,
        "healthArea": "",
        "house": "stark",
        "knowsNothing": "false",
        "motto": "A girl has no name",
        "name": "Arya Stark",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235555",
        "referenceId": "westeros987654321",
        "whatsappPhoneNumber": "14155235555",
      },
    ],
    "fileNamePrefix": "ironBank",
    "fileType": "excel",
  },
  {
    "data": [
      {
        "accountId": null,
        "amount": 10,
        "date": null,
        "dob": "31-08-1990",
        "dragon": "0",
        "fixedChoice": null,
        "healthArea": "",
        "house": "lannister",
        "knowsNothing": "false",
        "motto": "A lanister always pays his debts",
        "name": "Jaime Lannister",
        "openAnswer": "",
        "personalId": "",
        "phoneNumber": "14155235556",
        "referenceId": "westeros987654322",
        "whatsappPhoneNumber": "14155235555",
      },
    ],
    "fileNamePrefix": "gringotts",
    "fileType": "excel",
  },
]
`;

exports[`Do payment with Excel FSP Export FSP instructions Should return specified columns on Get FSP instruction with Excel-FSP when "columnsToExport" is set 1`] = `
[
  {
    "data": [
      {
        "amount": 20,
        "dob": "31-08-1990",
        "dragon": "1",
        "name": "John Snow",
        "phoneNumber": "14155235554",
        "referenceId": "westeros123456789",
      },
      {
        "amount": 10,
        "dob": "31-08-1990",
        "dragon": "0",
        "name": "Arya Stark",
        "phoneNumber": "14155235555",
        "referenceId": "westeros987654321",
      },
    ],
    "fileNamePrefix": "ironBank",
    "fileType": "excel",
  },
  {
    "data": [
      {
        "amount": 10,
        "dob": "31-08-1990",
        "dragon": "0",
        "name": "Jaime Lannister",
        "phoneNumber": "14155235556",
        "referenceId": "westeros987654322",
      },
    ],
    "fileNamePrefix": "gringotts",
    "fileType": "excel",
  },
]
`;

exports[`Do payment with Excel FSP Import FSP reconciliation data should give me a CSV template when I request it 1`] = `
[
  {
    "name": "ironBank",
    "template": [
      "phoneNumber",
      "status",
    ],
  },
  {
    "name": "gringotts",
    "template": [
      "phoneNumber",
      "status",
    ],
  },
]
`;
